--- a/interests.html
+++ b/interests.html
@@ -45,28 +45,28 @@
             <div class="card">
                 <!-- Placeholder for image -->
                 <div class="interest-img"
-                    style="background: url('https://placehold.co/600x400/6a1b9a/FFF?text=Tech') center/cover;"></div>
+                    style="background: url('images/tech.jpg') center/cover;"></div>
                 <h3>Nouvelles Technologies</h3>
                 <p>Veille technologique sur l'IA et le Big Data. Participation active aux hackathons.</p>
             </div>
 
             <div class="card">
                 <div class="interest-img"
-                    style="background: url('https://placehold.co/600x400/4a148c/FFF?text=Voyage') center/cover;"></div>
+                    style="background: url('images/voyage.jpg') center/cover;"></div>
                 <h3>Voyage</h3>
                 <p>Découverte de nouvelles cultures et paysages. Une source d'inspiration constante.</p>
             </div>
 
             <div class="card">
                 <div class="interest-img"
-                    style="background: url('https://placehold.co/600x400/9c27b0/FFF?text=Lecture') center/cover;"></div>
+                    style="background: url('images/lecture.jpg') center/cover;"></div>
                 <h3>Lecture</h3>
                 <p>Ouvrages scientifiques et romans. Le savoir est une arme.</p>
             </div>
 
             <div class="card">
                 <div class="interest-img"
-                    style="background: url('https://placehold.co/600x400/ec407a/FFF?text=Sport') center/cover;"></div>
+                    style="background: url('images/sport.jpg') center/cover;"></div>
                 <h3>Sport</h3>
                 <p>Pratique régulière pour un esprit sain dans un corps sain.</p>
             </div>
